single-page-developer-portfolio/styles.css
@import 'https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap';

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

:root {
	--black: #151515;
	--green: #4ee1a0;
	--red: #ff6f5b;
	--dark-gray: #242424;
	--light-gray: #d9d9d9;
	--white: #ffffff;
}

ul {
	list-style: none;
}

img,
picture,
video,
canvas,
svg {
	display: block;
	max-width: 100%;
}

a {
	text-decoration: none;
}

input,
button,
textarea,
select {
	font: inherit;
}

html {
	color: #fff;
	background-color: var(--black);
	font-size: 18px;
	font-family: 'Space Grotesk', sans-serif;
}

body {
	overflow-x: hidden;
}

header,
main {
	padding: 0.889rem;
}

/* General styles */

.sub-header {
	font-size: 2.2223rem;
}

.medium-header {
	font-size: 1.33rem;
}

.large-header {
	font-size: 2.6667rem;
}

.xl-header {
	font-size: 4.8889rem;
}

.para-font {
	font-size: 1rem;
}

.flex-display {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 1rem;
}

.button {
	font-size: 0.889rem;
	cursor: pointer;
	padding-bottom: 0.5rem;
	letter-spacing: 0.14rem;
	background-color: var(--black);
	border: none;
	color: var(--white);
	text-transform: uppercase;
	border-bottom: 2px solid var(--green);
}

.button:is(:hover, :active) {
	outline: none;
	color: var(--green);
	transition: color 0.2s ease-in;
}

.grid-container {
	display: grid;
	gap: 1.556rem;
}

/* Header */

header {
	position: relative;
}

.navigation {
	z-index: 1;
	gap: 1rem;
}

.navigation__list {
	flex-direction: row;
	justify-content: center;
	gap: 1.33rem;
}

header .navigation__list {
	margin-bottom: 18rem;
}

.social-icon {
	color: var(--white);
	cursor: pointer;
	width: 1.33rem;
	height: 1.33rem;
	justify-content: center;
}

.social-icon:hover {
	color: var(--green);
	transition: color 0.2s ease-in;
}
.mobile-img {
	position: absolute;
	z-index: -1;
	top: -0.75rem;
	width: 10rem;
}

.tablet-img,
.desktop-img {
	position: absolute;
	display: none;
}

.rings,
.circle {
	position: absolute;
}

.rings {
	left: -50%;
	top: 30%;
	z-index: -1;
}

.circle {
	left: 85%;
	top: 60%;
}

.introduction {
	text-align: center;
	gap: 1.75rem;
	margin-bottom: 3.445rem;
}

.introduction__name {
	line-height: 2.223rem;
}

.green-highlight {
	display: inline-block;
	border-bottom: 4px solid var(--green);
}

.introduction__description {
	font-size: 0.8889rem;
	line-height: 1.444rem;
	color: var(--light-gray);
}
/* Main */

/* Skills */
.skills {
	position: relative;
	margin-bottom: 4.445rem;
	padding: 2.223rem 0 0;
	border-top: 2px solid var(--light-gray);
	border-bottom: 2px solid var(--light-gray);
}

.skill {
	gap: 0.5rem;
}

.skill-experience {
	font-size: 0.889rem;
	color: var(--light-gray);
}

.skills .rings {
	top: 93%;
	left: 60%;
}

/* Projects */

.projects {
	gap: 2rem;
	padding-bottom: 4.445rem;
}

.projects__header {
	width: 100%;
	flex-direction: row;
	justify-content: space-between;
}

/* Project images */
.desktop-preview {
	display: none;
}

.projects-container {
	gap: 2.5rem;
}

.project {
	align-items: flex-start;
	text-align: start;
	gap: 0.75rem;
}

.project__title {
	text-transform: uppercase;
}

.project__skills {
	flex-direction: row;
	text-transform: uppercase;
	color: var(--light-gray);
	margin-bottom: 1rem;
}

.project__buttons {
	flex-direction: row;
	gap: 1.6667rem;
}

/* Footer */
/* Contact */

.footer {
	gap: 1rem;
	text-align: center;
	padding: 3.335rem 0.889rem 1.25rem;
	width: 100%;
	background-color: var(--dark-gray);
}

.contact-footer-section {
	position: relative;
	gap: 3rem;
	border-bottom: 2px solid var(--light-gray);
	padding-bottom: 5rem;
}

.footer .rings {
	z-index: 1;
	top: 80%;
	left: -50%;
}
.footer button {
	align-self: flex-end;
	background-color: var(--dark-gray);
}

.contact p {
	font-size: 0.889rem;
	color: var(--light-gray);
}

.contact-form {
	gap: 2.5rem;
	width: 100%;
}

.contact-form input,
.contact-form textarea {
	width: 100%;
	text-transform: uppercase;
	padding: 0 1.333rem 0.889rem;
	background-color: var(--dark-gray);
	color: var(--light-gray);
	border: none;
	border-bottom: 2px solid var(--light-gray);
}

.contact-form input:focus,
.contact-form textarea:focus {
	outline: none;
}

.contact-form label {
	width: 100%;
	position: relative;
}

.exclamation,
.error-msg {
	color: var(--red);
	position: absolute;
}

.exclamation {
	font-size: 1rem;
	width: 1.33rem;
	height: 1.33rem;
	right: 0rem;
	bottom: 0.75rem;
	border-radius: 50%;
	border: 1px solid var(--red);
}
.error-msg {
	left: 0;
	bottom: -1.25rem;
}

.hidden {
	display: none;
}

/* Footer nav */
.footer-nav {
	padding: 1rem 0;
}

/* Attribution */

.attribution {
	width: 100%;
	font-size: 0.9rem;
}

.attribution a {
	color: var(--white);
	border-bottom: 1px solid var(--green);
}

.attribution a:is(:hover, :active) {
	color: var(--green);
	transition: color 0.2s ease-in;
}
/* JS States */

.contact-form label.error .exclamation,
.contact-form label.error .error-msg {
	display: block;
}

.contact-form label.error input {
	border-bottom-color: var(--red);
}

.contact-form label.success input {
	border-bottom-color: var(--green);
}

/* Common */
@media (min-width: 26.875rem) {
	.name {
		font-size: 1.778rem;
	}

	.navigation {
		flex-direction: row;
		justify-content: space-between;
		align-items: flex-start;
		margin-bottom: 7.5rem;
	}

	header .navigation__list {
		margin-bottom: 0;
	}

	.mobile-img {
		display: none;
	}

	.introduction {
		text-align: start;
		align-items: flex-start;
	}

	.introduction__name {
		font-size: 4rem;
		line-height: 4.25rem;
	}

	.introduction__description {
		font-size: 1rem;
	}

	.skills {
		margin-bottom: 2.5rem;
		border-bottom: none;
		justify-items: start;
		column-gap: 4.333rem;
		row-gap: 2.778rem;
		grid-template-columns: repeat(2, 1fr);
	}

	.skill-name {
		font-size: 2.667rem;
	}

	.skill {
		align-items: flex-start;
	}
	.skill-experience {
		font-size: 1rem;
	}

	.projects-container {
		display: grid;
		grid-template-columns: repeat(2, 1fr);
	}

	.projects__header .sub-header {
		font-size: 4rem;
	}

	.contact-footer-section {
		border-bottom: none;
	}

	.contact p {
		font-size: 1rem;
	}

	.footer .navigation {
		margin-bottom: 2rem;
		width: 100%;
		border-top: 2px solid var(--light-gray);
		align-items: center;
	}
}
/* Tablet */

@media (min-width: 26.875rem) and (max-width: 48rem) {
	header,
	main,
	.footer {
		padding: 1.667rem;
	}

	.rings {
		top: 22%;
		left: -35%;
	}

	.circle {
		left: 92%;
		top: 70%;
	}

	.tablet-img {
		z-index: -1;
		display: block;
		width: 17.889rem;
		top: -1rem;
		right: -0.5rem;
	}

	.introduction {
		margin-bottom: 0;
		width: 24.722rem;
	}

	.skills .rings {
		top: 75%;
		left: 80%;
	}

	.projects {
		gap: 3rem;
		padding-bottom: 3rem;
	}

	.projects-container {
		column-gap: 1.33rem;
		row-gap: 3.3335rem;
	}

	.footer .rings {
		left: -85%;
	}

	.project__bg {
		width: 19rem;
		height: 14.0555rem;
	}

	.contact-footer-section {
		width: 24.7222rem;
		padding-bottom: 4rem;
	}
}

/* Desktop */
@media (min-width: 48.125rem) {
	body {
		overflow-x: visible;
		max-width: 80rem;
		margin: auto;
		display: flex;
		flex-direction: column;
		align-items: center;
	}

	header,
	main,
	.contact-footer-section,
	.footer .navigation {
		padding: 1.667rem;
		max-width: 63rem;
	}
	header {
		width: 100%;
		border-bottom: 2px solid var(--light-gray);
	}

	.tablet-img {
		display: none;
	}

	.header .rings {
		top: 7.5rem;
		left: -15.25rem;
	}

	.header .circle {
		top: 26.5rem;
		left: 34rem;
	}

	.desktop-img {
		z-index: -1;
		position: absolute;
		display: block;
		width: 24.722rem;
		top: -2rem;
		right: 0.51rem;
	}

	.introduction {
		max-width: 39.222rem;
		margin-bottom: 12rem;
	}

	.introduction__description {
		max-width: 24.722rem;
	}

	/* skills */

	.skills {
		width: 100%;
		padding-top: 5rem;
		gap: 5.8rem;
		border: none;
		grid-template-columns: repeat(3, 1fr);
	}

	.skills .rings {
		top: 17.5rem;
		left: 55rem;
	}

	.projects-container {
		column-gap: 1.667rem;
		row-gap: 3.8889rem;
	}

	.project {
		position: relative;
	}

	.project:hover .project__buttons {
		z-index: 1;
	}

	.project__buttons {
		z-index: -1;
		position: absolute;
		flex-direction: column;
		justify-content: center;
		width: 100%;
		height: 81%;
		background-color: #151515ab;
	}

	.project__buttons .button {
		background-color: transparent;
	}

	.mobile-preview {
		display: none;
	}

	.desktop-preview {
		display: block;
		width: 30rem;
		height: 22.222rem;
	}

	.footer {
		padding: 4rem 1.667rem 1rem;
	}

	.footer .rings {
		top: 14rem;
		left: -30%;
	}

	.contact-footer-section {
		margin-bottom: 3rem;
		text-align: start;
		width: 100%;
		flex-direction: row;
		align-items: flex-start;
		justify-content: space-between;
	}

	.contact,
	.contact-form {
		align-items: flex-start;
		max-width: 24.722rem;
	}

	.exclamation {
		font-size: 1.33rem;
		border: none;
	}

	.contact .sub-header {
		font-size: 4rem;
	}

	.attribution {
		font-size: 1.33rem;
	}
}

